fixed padding wrap news

--- a/src/sass/_main-page.scss
+++ b/src/sass/_main-page.scss
@@ -766,6 +766,9 @@
     @media (max-width: 1200px) {
       margin-left: 30px;
     }
+    @media (max-width: 870px) {
+      margin-left: 10px;
+    }
     @media (max-width: 640px) {
       margin-left: 0px;
     }
